--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
 		"@woocommerce/dependency-extraction-webpack-plugin": "^2.2.0",
 		"@wordpress/prettier-config": "^2.5.0",
 		"@wordpress/scripts": "^24.6.0"
+	},
+	"dependencies": {
+		"@wordpress/hooks": "^3.22.0"
 	}
 }
