--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"license": "GPL-3.0+",
 	"devDependencies": {
 		"@woocommerce/dependency-extraction-webpack-plugin": "^2.2.0",
+		"@woocommerce/eslint-plugin": "^2.2.0",
 		"@wordpress/prettier-config": "^2.5.0",
 		"@wordpress/scripts": "^24.6.0"
 	},
