--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,12 @@
 		}
 	},
 	"require-dev": {
-		"phpunit/phpunit": "^9.0"
+		"phpunit/phpunit": "^9.0",
+		"automattic/jetpack-autoloader": "^2"
+	},
+	"config": {
+		"allow-plugins": {
+			"automattic/jetpack-autoloader": true
+		}
 	}
 }
